# ChipDecode

./: CMakeLists.txt  README.md  filehelpers.c  main.c
include/: decoder.h  disassembler.h  filehelpers.h
src/: decoder.c  disassembler.c  filehelpers.c  main.c
